# json-dl

./: .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/gen-dl/: CMakeLists.txt  main.cpp
apps/gen-host/: CMakeLists.txt  main.cpp
apps/impl/: CMakeLists.txt
apps/merge/: CMakeLists.txt
benchmark-suite/: CMakeLists.txt
benchmark-suite/benchmark-1/: CMakeLists.txt
docs/: host-file-specs.md  impl-file-specs.md
headers/: common.h
opt/: CMakeLists.txt
src/: CMakeLists.txt  common.cpp
test-suite/test-1/: CMakeLists.txt  impl.json  make.sh  model.json
